--- a/uc_termsofservice.css
+++ b/uc_termsofservice.css
@@ -1,7 +1,7 @@
-.tos-text {
+#uc_termsofservice_agreement_checkout-pane .tos-text {
   border: 1px solid #D2E6F3;
-  height: 100px;
-  overflow: auto;
+  overflow: scroll;
+  height: 200px;
   padding: 5px;
   margin: 0 0 10px 0;
   display: block;
@@ -9,4 +9,8 @@
 
 #uc-termsofservice-general-form #edit-submit {
   display: none;
+}
+
+#uc_termsofservice_agreement_checkout-pane {
+  position: relative;
 }
