Minor coding and documentation standards fixes.

--- a/uc_termsofservice.css
+++ b/uc_termsofservice.css
@@ -1,10 +1,14 @@
+/**
+ * @file
+ * Styles for uc_termsofservice.
+ */
 #uc_termsofservice_agreement_checkout-pane .tos-text {
   border: 1px solid #D2E6F3;
-  overflow: auto;
-  height: 200px;
-  padding: 5px;
-  margin: 0 0 10px 0;
   display: block;
+  height: 200px;
+  margin: 0 0 10px 0;
+  overflow: auto;
+  padding: 5px;
 }
 
 #uc-termsofservice-general-form #edit-submit {
