Issue #736456: Add position:relative; to #uc_termsofservice_agreement_checkout-pane .tos-text to make it work with IE7.

--- a/uc_termsofservice.css
+++ b/uc_termsofservice.css
@@ -2,6 +2,14 @@
  * @file
  * Styles for uc_termsofservice.
  */
+#uc-termsofservice-general-form #edit-submit {
+  display: none;
+}
+
+#uc_termsofservice_agreement_checkout-pane {
+  position: relative;
+}
+
 #uc_termsofservice_agreement_checkout-pane .tos-text {
   border: 1px solid #D2E6F3;
   display: block;
@@ -9,12 +17,5 @@
   margin: 0 0 10px 0;
   overflow: auto;
   padding: 5px;
-}
-
-#uc-termsofservice-general-form #edit-submit {
-  display: none;
-}
-
-#uc_termsofservice_agreement_checkout-pane {
   position: relative;
 }
